# jfrview

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  build.rs  index.html  index.ts  package-lock.json  package.json  style.css  types.txt
.github/: dependabot.yml
.github/workflows/: build_and_test.yml  deploy.yml
.zed/: settings.json  tasks.json
benches/: full_parse.rs  interpret.rs  render_bench.rs
js-tests/: package-lock.json  package.json
js-tests/benches/: bench.mjs
src/: data.rs  exec.rs  export.rs  flame_graph.rs  lib.rs  main.rs  speedscope.rs  type_explorer.rs
src/snapshots/: jfrview__export__tests__non-native, no-threads@heavy.jfr.snap  jfrview__export__tests__non-native, no-threads@profiler-multichunk.jfr.snap  jfrview__export__tests__non-native, no-threads@recording-2_1.jfr.snap  jfrview__export__tests__non-native, no-threads@recording.jfr.snap  jfrview__export__tests__non-native, threads@heavy.jfr.snap  jfrview__export__tests__non-native, threads@profiler-multichunk.jfr.snap  jfrview__export__tests__non-native, threads@recording-2_1.jfr.snap  jfrview__export__tests__non-native, threads@recording.jfr.snap  jfrview__export__tests__parse_without_panic@recording-2_1.jfr.snap  jfrview__export__tests__parse_without_panic@recording.jfr.snap  jfrview__export__tests__parse_without_panic_native@heavy.jfr.snap  jfrview__export__tests__parse_without_panic_native@profiler-multichunk.jfr.snap  jfrview__export__tests__parse_without_panic_native@recording-2_1.jfr.snap  jfrview__export__tests__parse_without_panic_native@recording.jfr.snap  jfrview__export__tests__parse_without_panic_nonnative@heavy.jfr.snap  jfrview__export__tests__parse_without_panic_nonnative@profiler-multichunk.jfr.snap  jfrview__export__tests__parse_without_panic_nonnative@recording-2_1.jfr.snap  jfrview__export__tests__parse_without_panic_nonnative@recording.jfr.snap  jfrview__export__tests__with-native, no-threads@heavy.jfr.snap  jfrview__export__tests__with-native, no-threads@profiler-multichunk.jfr.snap  jfrview__export__tests__with-native, no-threads@recording-2_1.jfr.snap  jfrview__export__tests__with-native, no-threads@recording.jfr.snap  jfrview__export__tests__with-native, threads@heavy.jfr.snap  jfrview__export__tests__with-native, threads@recording-2_1.jfr.snap  jfrview__export__tests__with-native, threads@recording.jfr.snap  jfrview__flame_graph__tests__parse_without_panic@heavy.jfr.snap  jfrview__flame_graph__tests__parse_without_panic@profiler-multichunk.jfr.snap  jfrview__flame_graph__tests__parse_without_panic@recording-2_1.jfr.snap  jfrview__flame_graph__tests__parse_without_panic@recording.jfr.snap  jfrview__speedscope__tests__convert_valid_files@heavy.jfr.snap  jfrview__speedscope__tests__non-native@heavy.jfr.snap  (+7 more)
test-data/: Heavy.java  README.md
tests/: integration_tests.rs
web-src/: colors.ts  index.html  index.ts  manifest.json  package-lock.json  package.json  style.css
(+7 files in other folders)
