[package]
name = "jfrview"
version = "0.1.0"
repository = "https://github.com/beatbrot/jfrview"
description = "One-Click Flamegraph Visualization for JFR Files in the Browser"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
indexmap = { version = "2.9.0", features = ["serde"] }
jfrs = "0.2.5"
anyhow = "1.0.98"
wasm-bindgen = "0.2.97"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
insta = { version = "1.43.1", features = ["glob"] }
divan = "0.1.12"

[[bench]]
name = "full_parse"
harness = false

[profile.release]
debug = "line-tables-only"

[profile.bench]
debug = "line-tables-only"

[package.metadata.wasm-pack.profile.release]
# Workaround for https://github.com/rustwasm/wasm-pack/issues/1501
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
