[package]
name = "jfrview"
version = "0.2.0"
repository = "https://github.com/beatbrot/jfrview"
description = "One-Click Flamegraph Visualization for JFR Files in the Browser"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
jfrs = "0.2.5"
anyhow = "1.0.100"
wasm-bindgen = "0.2.97"
hashbrown = "0.16.1"

[dev-dependencies]
insta = { version = "1.46.1", features = ["glob", "yaml"] }
serde = { version = "1.0.228", features = ["derive"] }
wasm-bindgen-test = "0.3.58"

[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
criterion = { package = "codspeed-criterion-compat", version = "4.1.0" }

[profile.release]
opt-level = "s"
strip = true
lto = "thin"
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
# Workaround for https://github.com/rustwasm/wasm-pack/issues/1501
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int", "-Oz"]

[[bench]]
name = "interpret"
harness = false
